--- a/blog_project/blog_app/templates/base.html
+++ b/blog_project/blog_app/templates/base.html
@@ -14,8 +14,13 @@
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="{% url 'signup' %}">Signup</a></li>
-          <li><a href="#">Login</a></li>
+          {% if user.is_authenticated %}
+            <li><a href="#">{{ user.username }} </a></li>
+            <li><a href="{% url 'logout' %}">Logout</a></li>
+          {% else %}
+            <li><a href="{% url 'signup' %}">Signup</a></li>
+            <li><a href="{% url 'login' %}">Login</a></li>
+          {% endif %}
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
             <ul class="dropdown-menu">
