--- a/blog_project/blog_app/templates/blog_app/index.html
+++ b/blog_project/blog_app/templates/blog_app/index.html
@@ -3,4 +3,21 @@
 {% block title %} Homepage {% endblock %}
 {% block content %}
   <h1 class="text-center">Index page</h1>
+  {% if user.is_authenticated %}
+    {% if blog_posts %}
+      {% for post in blog_posts %}
+      <div class="col-md-10">
+          <h1>{{ post.title }}</h1>
+          <article><p>
+            {{ post.content }}
+            </p></article>
+      </div>
+      <hr/>
+      {% endfor %}
+    {% else %}
+      <p>No polls are available.</p>
+    {% endif %}
+  {% else %}
+    <h3 class="text-center">Login to create post and see post</h3>
+  {% endif %}
 {% endblock %}
