--- a/blog_project/blog_app/templates/base.html
+++ b/blog_project/blog_app/templates/base.html
@@ -10,10 +10,11 @@
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href="#">Blog With Django</a>
+        <a class="navbar-brand" href="{% url 'index' %}">Blog With Django</a>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
+          <li><a href="{% url 'new_blog' %}">Create Post</a></li>
           {% if user.is_authenticated %}
             <li><a href="#">{{ user.username }} </a></li>
             <li><a href="{% url 'logout' %}">Logout</a></li>
@@ -21,16 +22,6 @@
             <li><a href="{% url 'signup' %}">Signup</a></li>
             <li><a href="{% url 'login' %}">Login</a></li>
           {% endif %}
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
-              <li role="separator" class="divider"></li>
-              <li><a href="#">Separated link</a></li>
-            </ul>
-          </li>
         </ul>
       </div>
     </div>
