--- a/blog_project/blog_app/templates/blog_app/new_blog.html
+++ b/blog_project/blog_app/templates/blog_app/new_blog.html
@@ -3,7 +3,7 @@
 {% block title %}Create a new post{% endblock %}
 
 {% block content %}
-<form action="{% url 'new_blog' %}" method="POST">
+<form method="POST">
   {% csrf_token %}
   {{ form.non_field_errors }}
   <div class="fieldWrapper">
@@ -16,7 +16,9 @@
     <label for="{{ form.content.id_for_label }}">Blog content:</label>
     {{ form.content }}
   </div>
-  <input type="submit" value="Submit" class="btn btn-primary">
+  <div class="div-submit">
+    <input type="submit" value="Submit" class="btn btn-primary">
+  </div>
 </form>
 
 {% endblock content %}
