--- a/blog_project/blog_app/templates/blog_app/signup.html
+++ b/blog_project/blog_app/templates/blog_app/signup.html
@@ -4,11 +4,21 @@
 
 {% block content %}
   <h2>Sign up</h2>
-  <form method="POST">
-    {% csrf_token %}
-    <div class="form-group">
-      {{ form.as_p }}
-    </div>
-    <button type="submit" class="btn btn-primary">Sign up</button>
-  </form>
+  <div class="signup-form container">
+    <form method="POST">
+      {% csrf_token %}
+        {% for field in form %}
+        <p>
+          {{ field.label_tag }}<br>
+          {{ field }}
+          {% for error in field.errors %}
+            <p style="color: red">{{ error }}</p>
+          {% endfor %}
+        </p>
+        {% endfor %}
+      <div class="div-submit">
+        <button type="submit" class="btn btn-primary">Sign up</button>
+      </div>
+    </form>
+  </div>
 {% endblock %}
