--- a/blog_project/blog_app/templates/base.html
+++ b/blog_project/blog_app/templates/base.html
@@ -6,6 +6,7 @@
   {% load static %}
   <link href="{% static 'blog_app/css/bootstrap.min.css' %}" rel="stylesheet">
   <link href="{% static 'blog_app/css/custom.css' %}" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 </head>
 <body>
   <nav class="navbar navbar-default">
@@ -32,5 +33,11 @@
     {% block content %}
     {% endblock %}
   </div>
+  {% block js %}
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script  src="{% static 'blog_app/js/custom.js' %}"></script>
+    {% endblock %}
+  {% block extrajs %}
+  {% endblock %}
 </body>
 </html>
